<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"


    >

    <TextView
        android:id="@+id/stringlogin_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h1_latihan_relative"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"

        />

    <EditText
        android:id="@+id/username_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username_string"
        android:layout_centerInParent="true"
        android:autofillHints="username"
        android:inputType="text"
        />


    <EditText
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_string"
        android:layout_centerInParent="true"
        android:layout_below="@+id/username_view"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login_string"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_view"
        android:text="@string/signup_string"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />

</RelativeLayout>